# pirates-online-classic

./: .gitignore  LICENSE  README.md  cleanse.py  last_working_options.txt  rpcTestClient.py
.github/ISSUE_TEMPLATE/: bug_report.md
Nirai/: .gitignore  make.py
Nirai/data/: NiraiStart.py
Nirai/linux/: aes-to-so.sh  ubuntu-build-panda3d.sh
Nirai/nirai/: .gitignore
Nirai/nirai/python/: CMakeLists.txt  README.md
Nirai/nirai/python/Include/: pyconfig.h  pyconfig_mac.h  pyconfig_windows.h  pyerrors.h
Nirai/nirai/python/Python/: ceval.c  config.c
Nirai/src/: classic.cxx
astron/: .gitignore
astron/config/: astrond.yml  blackbox.yml
astron/darwin/: start_ai.command  start_astron.command  start_uberdog.command
astron/databases/: .gitignore
astron/dclass/: otp.dc  pirates.dc
astron/linux/: start_ai.sh  start_uberdog.sh
astron/win32/: start_ai.bat  start_astron.bat  start_uberdog.bat
config/: .gitignore  dev.prc  dist.prc  general.prc  performance.prc  server.prc  trialend.env
config/environ/: blackbox.env  default.env  trialend.env
config/release/: dist_prod.prc
darwin/: start_game.command
deployment/: build_gameclient.py  build_gamedata.py  prepare_gameclient.py  runtime.py
deployment/panda3d/: __init__.py
libpirates/: SeaPatchNode.py  SeaPatchRoot.py
otp/ai/: AIBase.py  AIBaseGlobal.py  AIInterestHandles.py  GarbageLeakServerEventAggregatorAI.py  MagicWordGlobal.py  MagicWordManager.py  MagicWordManagerAI.py  Original_MagicWordManager.py  TimeManager.py  TimeManagerAI.py  _MagicWordManager.py
otp/avatar/: Avatar.py  AvatarDNA.py  AvatarHandle.py  DistributedAvatar.py  DistributedAvatarAI.py  DistributedAvatarUD.py  DistributedPlayer.py  DistributedPlayerAI.py  Emote.py  LocalAvatar.py  PlayerBase.py  PositionExaminer.py  ShadowCaster.py
otp/chat/: ChatAssistant.py  ChatGarbler.py  ChatGlobals.py  ChatInputTyped.py  ChatInputWhiteList.py  ChatManager.py  ChatManagerV2.py  ChatMessage.py  WhiteList.py
otp/distributed/: Account.py  AccountAI.py  AccountUD.py  AstronClientRepository.py  AstronDatabaseInterface.py  AstronInternalRepository.py  CentralLogger.py  CentralLoggerAI.py  CentralLoggerUD.py  DistributedDirectory.py  DistributedDirectoryAI.py  DistributedDistrict.py  DistributedDistrictAI.py  DistributedDistrictUD.py  DistributedTestObject.py  DistributedTestObjectAI.py  GameServerTestSuite.py  MsgTypes.py  NetMessenger.py  OTPClientRepository.py  OTPInternalRepository.py  ObjectServer.py  ObjectServerAI.py  ObjectServerUD.py  OtpDoGlobals.py  PotentialAvatar.py  PotentialShard.py
otp/friends/: AvatarFriendsManager.py  AvatarFriendsManagerUD.py  FriendInfo.py  FriendManager.py  FriendManagerAI.py  FriendSecret.py  GuildManager.py  GuildManagerAI.py  GuildManagerUD.py  PlayerFriendsManager.py  PlayerFriendsManagerUD.py
otp/launcher/: DownloadWatcher.py  DummyLauncherBase.py  LauncherBase.py  procapi.py
otp/login/: AccountServerConstants.py  CreateAccountScreen.py  GuiScreen.py  HTTPUtil.py  LeaveToPayDialog.py  LoginBase.py  LoginDISLTokenAccount.py  LoginGSAccount.py  LoginGoAccount.py  LoginScreen.py  LoginTTAccount.py  LoginWebPlayTokenAccount.py  MultiPageTextFrame.py  PrivacyPolicyPanel.py  RemoteValueSet.py  SecretFriendsInfoPanel.py  TTAccount.py
otp/margins/: ClickablePopup.py  MarginCell.py  MarginManager.py  MarginPopup.py  WhisperPopup.py
otp/movement/: Mover.py  PyVec3.py
otp/namepanel/: NameCheck.py  NameTumbler.py  PickANamePattern.py
otp/nametag/: ChatBalloon.py  ClickablePopup.py  MarginManager.py  MarginPopup.py  Nametag.py  Nametag2d.py  Nametag3d.py  NametagConstants.py  NametagFloat2d.py  NametagFloat3d.py  NametagGlobals.py  NametagGroup.py  WhisperPopup.py
otp/otpbase/: OTPBase.py  OTPGlobals.py  OTPLauncherGlobals.py  OTPLocalizer.py  OTPLocalizerEnglish.py  OTPRender.py  OTPTimer.py  OTPUtil.py
otp/otpgui/: OTPDialog.py
otp/snapshot/: SnapshotDispatcher.py  SnapshotDispatcherAI.py  SnapshotDispatcherUD.py  SnapshotRenderer.py  SnapshotRendererAI.py  SnapshotRendererUD.py
otp/speedchat/: ColorSpace.py  SCColorScheme.py  SCConstants.py  SCCustomMenu.py  SCCustomTerminal.py  SCDecoders.py  SCElement.py  SCEmoteMenu.py  SCEmoteTerminal.py  SCGMTextTerminal.py  SCMenu.py  SCMenuHolder.py  SCObject.py  SCSettings.py  SCStaticTextTerminal.py  SCTerminal.py  SpeedChat.py  SpeedChatGMHandler.py  SpeedChatGlobals.py  SpeedChatTypes.py
otp/switchboard/: badwordpy.py
otp/uberdog/: AccountDetailRecord.py  DistributedChatManager.py  DistributedChatManagerAI.py  DistributedChatManagerUD.py  OtpAvatarManager.py  OtpAvatarManagerAI.py  OtpAvatarManagerUD.py  RejectCode.py
otp/web/: Setting.py  SettingsMgr.py  SettingsMgrAI.py  SettingsMgrBase.py  SettingsMgrUD.py
pirates/ai/: HolidayDates.py  HolidayGlobals.py  NewsManager.py  NewsManagerAI.py  NewsManagerUD.py  PiratesAIRepository.py  PiratesMagicWordManager.py  PiratesMagicWordManagerAI.py  QuestManagerAI.py  ServiceStart.py
pirates/band/: BandConstance.py  DistributedBandMember.py  DistributedBandMemberAI.py  DistributedBandMemberOV.py  (+4 more)
tools/: .gitignore  cg2glsl.bat  cg2glsl.py  cleanse.bat  cleanse.py  compile_resources.bat  compile_resources.py  findterm.bat  findterm.py  findtermAI.bat  findtermAI.py  findterm_otp.bat  findterm_otp.py  libpirates_finder.bat  libpirates_finder.py  nodeName_finder.bat  nodeName_finder.py  nodeParent_finder.bat  nodeParent_finder.py  nodeParent_updater.bat  nodeParent_updater.py  pandac_finder.bat  pandac_finder.py  pandac_upgrader.bat  pandac_upgrader.py  removeChildren_finder.bat  removeChildren_finder.py  remove_egg.bat  remove_egg.py  remove_rgb.bat  remove_rgb.py  stub_generator.bat  stub_generator.py  update_PythonUtil.bat  update_PythonUtil.py  update_removeChildren.bat  update_removeChildren.py  whitelistTool.py  whitelisttool.bat
win32/: settings.env  start_client.bat  start_custom.bat  start_dev.bat  start_launcher.bat  stat_blackbox.bat
(+1484 files in other folders)
